inital component setup and nav bar

--- a/client/capstone-project/src/app/nav/nav.component.html
+++ b/client/capstone-project/src/app/nav/nav.component.html
@@ -1,1 +1,13 @@
-<p>nav works!</p>
+<nav>
+  <ul>
+    <li>
+        <a routerLink="myClubs" routerLinkActive="active">My Clubs</a>
+    </li>
+    <li>
+        <a routerLink="findClubs" routerLinkActive="active">Find Clubs</a>
+    </li>
+    <li>
+        <a routerLink="startClub" routerLinkActive="active">Start Club</a>
+    </li>
+  </ul>
+</nav>
