--- a/client/capstone-project/src/styles.css
+++ b/client/capstone-project/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@charset "utf-8";
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding:0;
+    margin:0;
+    color: #414535;
+}
+
+#wrapper {
+    background-color: #96BBBB;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+}
