--- a/client/capstone-project/src/app/default/default.component.html
+++ b/client/capstone-project/src/app/default/default.component.html
@@ -1,6 +1,18 @@
 <h1>Welcome Book Lovers!</h1>
-<div class="p-text-wrap" style="width: 10rem">
-    <p>Are you looking to meet your new favorite book!? (and I guess other people who like reading too). Have you wanted to escape to a far away land with magic, or solve the murder case or even perhepas fall in love? Youve come to the right place. We have Fantasy, Romance, Mystery, Horror, Science Fiction, and Thriller books lcubs to find your next new adventure. </p>
-</div>
-<p-button id="register" class="p-button-rounded" label="Register" (onClick)="onRegister()"></p-button>
-<p-button id="login" class="p-button-rounded" label="Log In" (onClick)="onLogin()"></p-button>
+<body>
+    <div class="description">
+        <p><strong>Are you looking to meet your new favorite book!?</strong> <br>(and I guess other people who like reading too). <br><br>Have you wanted to escape to a far away land with magic, or solve the murder case or even perhaps fall in love? You've come to the right place. We have Fantasy, Romance, Mystery, Horror, Science Fiction, and Thriller books clubs to find your next new adventure. </p>
+    </div>
+    <div class="images">
+        <img src="assets/img/fantasy.png" alt="fantasy">
+        <img src="assets/img/sci fi.png" alt="Sciecne fiction">
+        <img src="assets/img/horror.png" alt="horror">
+        <img src="assets/img/romance.png" alt="romance">
+        <img src="assets/img/thriller.png" alt="thriller">
+        <img src="assets/img/mystery.png" alt="mystery">
+    </div>
+    <div class="buttons">
+        <p-button id="register" class="p-button-rounded" label="Register" (onClick)="onRegister()"></p-button>
+        <p-button id="login" class="p-button-rounded" label="Log In" (onClick)="onLogin()"></p-button>
+    </div>
+</body>
