--- a/client/capstone-project/src/styles.css
+++ b/client/capstone-project/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @charset "utf-8";
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeng/resources/primeng.css';
+
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     padding:0;
