--- a/client/capstone-project/src/styles.css
+++ b/client/capstone-project/src/styles.css
@@ -2,6 +2,8 @@
 @charset "utf-8";
 @import '../node_modules/primeng/resources/primeng.min.css';
 @import '../node_modules/primeng/resources/primeng.css';
+@import '../node_modules/primeicons/primeicons.css';
+@import '../node_modules/primeflex/primeflex.css';
 
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
