--- a/client/capstone-project/src/app/register/register.component.css
+++ b/client/capstone-project/src/app/register/register.component.css
@@ -5,20 +5,10 @@ form {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-evenly;
-    flex-basis: content;
+    flex-basis: min-content;
     align-content: center;
-    
-}
-
-#container {
-    padding: 2em;
-    margin: 1em;
-    border: 2px solid #618985;
-    flex-basis: fill;
-    display: flex;
     background-color: #C19875;
-    align-content: center;
-    width: 50%;
+    
 }
 
 #inputs {
@@ -43,4 +33,8 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#regBtn {
+    margin: 2em;
 }
