final css changes for register

--- a/client/capstone-project/src/app/register/register.component.html
+++ b/client/capstone-project/src/app/register/register.component.html
@@ -47,6 +47,9 @@
       label="Register"
       type="submit"
       id="regBtn"
+      class="p-button-lg"
+      icon="pi pi-check" 
+      iconPos="left"
     ></p-button>
   </form>
 </div>
