--- a/client/capstone-project/src/app/register/register.component.html
+++ b/client/capstone-project/src/app/register/register.component.html
@@ -20,7 +20,7 @@
       <!-- Email -->
       <div class="p-col-12 p-md-4 pt-4">
         <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">@</span>
+          <span class="p-inputgroup-addon"><i class="pi pi-envelope"></i></span>
           <input
             type="text"
             pInputText
@@ -33,7 +33,7 @@
       <!-- Phone -->
       <div class="p-col-12 p-md-4 pt-4">
         <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">#</span>
+          <span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
           <input
             type="text"
             pInputText
