--- a/client/capstone-project/src/app/find-clubs/find-clubs.component.html
+++ b/client/capstone-project/src/app/find-clubs/find-clubs.component.html
@@ -1,2 +1,28 @@
 <h2>Find Your Book Heaven!</h2>
-<!-- <p-dropdown [options]="genres" [(ngModel)]="selectedGenre" optionLabel="name"></p-dropdown> -->
+<p-table id="table" [columns]="cols" [value]="club" [paginator]="true" [rows]="6" responsiveLayout="scroll">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.header}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-columns="coulmns" let-rowData let-club>
+        <tr [pSelectableRow]="rowData">
+            <td>
+                {{club.OrganizationName}}
+            </td>
+            <td>
+                {{club.GroupName}}
+            </td>
+            <td>
+                {{club.SponsorName}}
+            </td>
+            <td>
+                {{club.Members.length}}
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+<h4>Don't See one you like?</h4>
+<p-button id="btn" label="Start Club" (onClick)="startClubNav()"></p-button>
