--- a/client/capstone-project/src/app/start-club/start-club.component.html
+++ b/client/capstone-project/src/app/start-club/start-club.component.html
@@ -1,1 +1,102 @@
-<p>start-club works!</p>
+<h2>Start Your Own Paradise!</h2>
+<p><strong>Max Group size is 7!</strong></p>
+<form [formGroup]="startClubForm" (ngSubmit)="onSubmit(startClubForm.value)" id="form">
+    <!-- First and last Name -->
+    <div id="firstFour" class="p-fluid">
+      <div class="p-col-12 p-md-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-pencil"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Group Name"
+            formControlName="name"
+          />
+        </div>
+      </div>
+
+      <!-- Genre -->
+      <div class="p-col-12 p-md-4 pt-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-folder"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Genre"
+            formControlName="genre"
+          />
+        </div>
+      </div>
+
+      <!-- sponser name -->
+      <div class="p-col-12 p-md-4 pt-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Sponser Name"
+            formControlName="sponserName"
+          />
+        </div>
+      </div>
+       <!-- sponser email -->
+       <div class="p-col-12 p-md-4 pt-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-envelope"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Sponser Email"
+            formControlName="sponserEmail"
+          />
+        </div>
+      </div>
+      </div>
+      <div id="lastFour">
+       <!-- sponser phone -->
+       <div class="p-col-12 p-md-4 pl-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Sponser Phone"
+            formControlName="sponserPhone"
+          />
+        </div>
+      </div>
+       <!-- group size -->
+       <div class="p-col-12 p-md-4 pt-4 pl-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-users"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Group Size"
+            formControlName="groupSize"
+          />
+        </div>
+      </div>
+       <!-- book of month -->
+       <div class="p-col-12 p-md-4 pt-4 pl-4">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-book"></i></span>
+          <input
+            type="text"
+            pInputText
+            placeholder="Book of the Month"
+            formControlName="bookOfMonth"
+          />
+        </div>
+      </div>
+    </div>
+  </form>
+  <p-button
+      label="Submit"
+      type="submit"
+      id="subBtn"
+      class="p-button-lg"
+      icon="pi pi-check" 
+      iconPos="left"
+    ></p-button>
