updtaed table, fixed model, outlined myClubs

--- a/client/capstone-project/src/app/my-clubs/my-clubs.component.html
+++ b/client/capstone-project/src/app/my-clubs/my-clubs.component.html
@@ -1,1 +1,5 @@
-<p>my-clubs works!</p>
+<h2>Look at all these<br>amazing bookish things!</h2>
+<section id="myClubs">
+
+</section>
+<p-button id="joinBtn" label="Join More" (onClick)="joinClubs"></p-button>
