--- a/client/capstone-project/src/app/find-clubs/find-clubs.component.html
+++ b/client/capstone-project/src/app/find-clubs/find-clubs.component.html
@@ -1,5 +1,13 @@
 <h2>Find Your Book Heaven!</h2>
-<p-table id="table" [columns]="cols" [value]="club" [paginator]="true" [rows]="6" responsiveLayout="scroll">
+<p-table #dt id="table" [columns]="cols" [value]="club" [paginator]="true" [rows]="3" responsiveLayout="scroll" [globalFilterFields]="['club.OrganizationName', 'club.GroupName', 'club.SponsorName']">
+    <ng-template pTemplate="caption">
+        <div class="p-d-flex">
+            <span class="p-input-icon-left p-ml-auto">
+                <i class="pi pi-search"></i>
+                <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search keyword" />
+            </span>
+        </div>
+    </ng-template>
     <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let col of columns">
@@ -21,8 +29,23 @@
             <td>
                 {{club.Members.length}}
             </td>
+            <td>
+                {{club.BookOfMonth}}
+            </td>
+            <td>
+                <p-button class="p-button-sm" label="Click Here" (onClick)="showDialog()"></p-button>
+            </td>
         </tr>
     </ng-template>
 </p-table>
-<h4>Don't See one you like?</h4>
+<h4>Don't see one you like?</h4>
 <p-button id="btn" label="Start Club" (onClick)="startClubNav()"></p-button>
+<p-dialog header="Join or Leave Club" [(visible)]="display" [modal]="true" [style]="{width: '30vw'}" [keepInViewport]="true" closable="true">
+    Would you like to Join or Leave this Book Club?
+    <ng-template pTemplate="footer">
+        <span class="p-buttonset">
+            <button pButton type="button" label="Join" icon="pi pi-check" (click)="joinClub()"></button>
+            <button pButton type="button" label="Leave" icon="pi pi-times" (click)="leaveClub()"></button>
+        </span>
+    </ng-template>
+</p-dialog>
