start club works

--- a/client/capstone-project/src/app/start-club/start-club.component.html
+++ b/client/capstone-project/src/app/start-club/start-club.component.html
@@ -23,10 +23,10 @@
           <p-dropdown
             id="dropdown"
             [options]="genres"
-            [(ngModel)]="selectedGenre"
             optionLabel="OrganizationName"
+            optionValue="OrganizationName"
             placeholder="Select Genre"
-            formControlName="OranizationName"
+            formControlName="OrganizationName"
           ></p-dropdown>
         </div>
       </div>
