--- a/client/capstone-project/src/app/default/default.component.html
+++ b/client/capstone-project/src/app/default/default.component.html
@@ -1,7 +1,8 @@
 <h1>Welcome Book Lovers!</h1>
 <body>
+    <section>
     <div class="description">
-        <p><strong>Are you looking to meet your new favorite book!?</strong> <br>(and I guess other people who like reading too). <br><br>Have you wanted to escape to a far away land with magic, or solve the murder case or even perhaps fall in love? You've come to the right place. We have Fantasy, Romance, Mystery, Horror, Science Fiction, and Thriller books clubs to find your next new adventure. </p>
+        <p><strong>Are you looking to meet your new favorite book!?</strong> <br>(and I guess other people who like reading too). <br><br>Have you wanted to escape to a far away land with magic, or solve the murder case or even perhaps fall in love? <br>You've come to the right place. We have Fantasy, Romance, Mystery, Horror, Science Fiction, and Thriller books clubs to find your next new adventure. </p>
     </div>
     <div class="images">
         <img src="assets/img/fantasy.png" alt="fantasy">
@@ -11,6 +12,7 @@
         <img src="assets/img/thriller.png" alt="thriller">
         <img src="assets/img/mystery.png" alt="mystery">
     </div>
+</section>
     <div class="buttons">
         <p-button id="register" class="p-button-rounded" label="Register" (onClick)="onRegister()"></p-button>
         <p-button id="login" class="p-button-rounded" label="Log In" (onClick)="onLogin()"></p-button>
