--- a/client/capstone-project/src/app/my-clubs/my-clubs.component.html
+++ b/client/capstone-project/src/app/my-clubs/my-clubs.component.html
@@ -1,6 +1,10 @@
 <h2>Look at all these<br>amazing bookish things!</h2>
 <section id="myClubs">
-    <p>Book Club Name: Book of the Month</p>
-    <p>Book Club Name: Book of the Month</p>
+    <p-card id="card" header="Lovey Dovey">
+        <p>Book of the Month: It Ends With Us</p>
+    </p-card>
+    <p-card id="card" header="Avengers Assemble">
+        <p>Book of the Month: Ender's Game</p>
+    </p-card>
 </section>
 <p-button id="joinBtn" label="Join More" (onClick)="joinClubs"></p-button>
