--- a/client/capstone-project/src/styles.css
+++ b/client/capstone-project/src/styles.css
@@ -17,7 +17,7 @@ body {
     background-color: #96BBBB;
     min-height: 100%;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     position: absolute;
